    azimuthal ranges (all other pixels are ignored). Suggested and
    implemented by Ignacio Ruiz Cejudo.

*** Makefile extensions

  - $(ast-text-next TARGET, LIST): returns the next word (after TARGET) in
    the input LIST; see the documentation for more.

  - $(ast-text-next-words TARGET, NUM, LIST): returns the next NUM words
    after TARGET from LIST.

*** Library

  - gal_units_sblim_diff: calculate the difference in surface brighntess
    limit only assuming a different effective radius of a different
    telescope and/or a different exposure time.

  - gal_units_wavelength_flux_density_to_jy: convert given wavelength flux
    density (erg/s/cm^2/A) to Janskys.

** Removed features
** Changed features

*** All programs

  --cite: also prints the citation for the Gnuastro book/manual (using the
    Zenodo DOI for that release).

*** Library

  - gal_match_kdtree: a new 'arrange' argument has been added to define the
    arrangement of the output.

** Bugs fixed

  - bug #66216: NaN values in MakeProfile outputs for very small profiles
    (smaller than a pixel even after accounting for the truncation
    factor). Reported by Alejandro Camazón Pinilla.

  - bug #66262: color-faint-gray crashes when using --graykernelfwhm. Found
    and fixed by Samane Raji.

  - bug #66280: Convolve's check images not in same directory as output.

  - bug #66303: astscript-color-faint-gray crashes if using 4th
    channel. Reported by Elizabeth Sola and fixed by Raul Infante-Sainz.

  - bug #66308: Library's 'gal_wcs_img_to_world' and 'gal_wcs_world_to_img'
    returned inverse names when the operation was not in-place. Found and
    fixed by Giacomo Lorenzetti.

  - bug #66309: Match crashes if kdtree is not set. Found and fixed by
    Giacomo Lorenzetti.

  - bug #66572: MakeProfiles continues adding pixels after truncation when
    the profile is small (a couple of pixels), and the gradient is strong.
